<?xml version="1.0"?>
<package format="2">
  <name>wamv_localization</name>
  <version>0.0.0</version>
  <description>Navigation packages</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>gazebo_msgs</depend> -->
</package>
