<?xml version="1.0"?>
<package>
  <name>heartbeat</name>
  <version>1.0.0</version>
  <description>RobotX heartbeat package</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>wamv_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>wamv_msgs</run_depend>

</package>
